-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.4
-
Windows + MSVC 2010
When generating a single configuration vcxproj file then the handling of RC_FILE is incorrect for MSVC 2010. It includes an entry for the corresponding res file that is created by compiling the rc file, but there is no entry for the rc file in the vcxproj file. Therefore it never gets created.
| For Gerrit Dashboard: QTBUG-22545 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 15230,1 | Ensure that the RC_FILE is correctly handled in a single configuration | 4.8 | qt/qt | Status: MERGED | +2 | 0 |