Ensure that the RC_FILE is correctly handled in a single configuration

With MSVC 2010 if a single configuration vcxproj file was created then
it would not have an entry for the .rc file only the .res file that
would be compiled from it.  Without the entry for the .rc file then it
would not compile the .res file.

Task-number: QTBUG-22545

Merge-request: 1452
Reviewed-by: Joerg Bornemann <joerg.bornemann@nokia.com>